2006-12-04  Per Bothner  <per@bothner.com>

	* RunXQTS.java (endGroup): Don't call ModuleManager.register.
	Instead create ModuleInfo using findWithClassName.

	* RunXQTS.java (<init>): Add preprocessing for expected failures.

	* Makefile.am (EXTRA_DIST): Add a missing file.

2006-12-01  Per Bothner  <per@bothner.com>

	* RunXQTS.java (matches): If floating-point literal seem in
	otherwise non-matching output, compare values as float.
	(<init>): Update accordingly.

	* RunXQTS.java (<init>): Some tests pass if JAVA6 and
	use:java.text.Normalizer, and add PreProcess conditionals for that.

	* XQTS-trace.exp: Update for improved output formatting.

	* RunXQTS.java: Add support for collection.  Various updates.
	(getElementValue): New convenience method.

2006-11-25  Per Bothner  <per@bothner.com>

	* RunXQTS.java: Update expected failures.

2006-11-24  Per Bothner  <per@bothner.com>

	* RunXQTS.java (<init>): Update expected failures.

	* RunXQTS.java (matches): Match character entities in expected result.

2006-11-22  Per Bothner  <per@bothner.com>

	* RunXQTS.java (matches): If isXML, match "/>" and "></ANYNAME>".

	* RunXQTS.java (matches): Ignore spaces only if isXML.

	* RunXQTS.java (externalVariablesSet): New field.
	(endGroup): Use it to remove extenal variables bindings for this query.

	* RunXQTS.java (<init>): Update expected failures.
	(evalTest): Check for some unimplemented types and functions.

	* Makefile.am (check-XQTS): Fix typo.

	* RunXQTS.java: Rename Consumer methods append->write.

	* RunXQTS.java (badFormatting): Remove unused method.
	* TestSuite.java: Remove unused import.

2006-11-20  Per Bothner  <per@bothner.com>

	* Makefile.am (XQTS_JAVA_FLAGS): New macro.
	(check-XQTS): Use it.

2006-11-18  Per Bothner  <per@bothner.com>

	* RunXQTS.java: Update writeChars -> append.

2006-11-16  Per Bothner  <per@bothner.com>

	* TestMisc.java: Update expected result.

2006-11-09  Per Bothner  <per@bothner.com>
