@@ -1,3 +1,11 @@
+2006-12-05  Per Bothner  <per@bothner.com>
+
+	* Makefile.am (java_sources): Add RunXQTS.java, for the sake of dist.
+
+	* TestSuite.java: Add generic parameters if JAVA5.
+	* RunXQTS.java: Likewise.
+	(<init>): surrogates12..surrogates15 work for JAVA5 not just JAVA6.
+
 2006-12-04  Per Bothner  <per@bothner.com>
 
 	* RunXQTS.java (endGroup): Don't call ModuleManager.register.
